# nexus

./: .gitignore  README.md  RULES.md  SOUL.md  pyproject.toml  setup.sh
.heon/: memo-style.md  sector-wacc.md
.heon/memory/: index.sqlite
src/heon/: __init__.py  __main__.py  agent.py  cache.py  cli.py  data_sources.py
src/heon/engine/: __init__.py  pillar_evaluator.py  scorecard.py
src/heon/orchestrator/: __init__.py  execution_loop.py
src/heon/tools/: __init__.py
src/nexus/: __init__.py  __main__.py  agent.py  cache.py  cli.py  data_sources.py  formatters.py  llm.py  scratchpad_enhanced.py
src/nexus/agent/: compaction.py
src/nexus/browser/: __init__.py
src/nexus/cron/: __init__.py  executor.py
src/nexus/engine/: __init__.py  pillar_evaluator.py  red_flag_scanner.py  scorecard.py  validation_gate.py
src/nexus/eval/: __init__.py  questions.csv  runner.py  tracking.py
src/nexus/memory/: __init__.py  database.py  embeddings.py  manager.py  mmr.py  temporal_decay.py
src/nexus/orchestrator/: __init__.py  execution_loop.py  subagent.py
src/nexus/skills/: __init__.py  dcf.py  write_memo.py
src/nexus/tools/: __init__.py  filesystem.py  formatting.py  heartbeat.py  read_filings.py  spawn_subagent.py  web_search.py  web_search_enhanced.py
tests/: test_engine.py
