[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "1.0.0"
description = "Autonomous financial research agent — free data sources, zero API keys required"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "sec-edgar-downloader>=5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "click>=8.1.0",
    "prompt-toolkit>=3.0.0",
    "textual>=0.68.0",
    "duckduckgo-search>=5.0",
]

[project.scripts]
nexus = "nexus.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
